* S03: Document that C<let> and C<temp> forms are not declarators.
git-svn-id: http://svn.pugscode.org/pugs@23362 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -535,6 +535,10 @@ arguments proceeds as if the C<Signature> were the formal parameters for
 a function, except that, unlike in a function call, the parameters
 are bound C<rw> by default rather than C<readonly>.  See Binding below.
 
+Note that C<temp> and C<let> are I<not> variable declarators, because
+their effects only take place at runtime.  Therefore, they take an ordinary
+lvalue object as their arguments.  See S04 for more details.
+
 There are a number of other declarators that are not variable
 declarators.  These include both type declarators:
 
