--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -328,7 +328,7 @@ return that one argument.  However, this default doesn't make sense
 for operators like C<< < >> that don't return the same type as they
 take, so these kinds of operators overload the single-argument case
 to return something more meaningful.  All the comparison operators
-return a boolean for either 1 or 0 arguments.  Negated operators,
+return a boolean for either 1 or 0 arguments.  Negated operators
 return C<Bool::False>, and all the rest return C<Bool::True>.
 
 This metaoperator can also be used on the semicolon second-dimension
@@ -496,6 +496,7 @@ to include:
     my $foo		# ordinary lexically scoped variable
     our $foo		# lexically scoped alias to package variable
     has $foo		# object attribute
+    env $foo		# environmental lexical
     state $foo		# persistent lexical (cloned with closures)
     constant $foo	# lexically scoped compile-time constant
 
@@ -538,7 +539,7 @@ are bound C<rw> by default rather than C<readonly>.  See Binding below.
 
 Note that C<temp> and C<let> are I<not> variable declarators, because
 their effects only take place at runtime.  Therefore, they take an ordinary
-lvalue object as their arguments.  See S04 for more details.
+lvalue object as their argument.  See S04 for more details.
 
 There are a number of other declarators that are not variable
 declarators.  These include both type declarators:
