--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -16,7 +16,7 @@ Allison Randal <al@shadowed.net>
    Date: 24 Jun 2002
    Last Modified: 22 Apr 2006
    Number: 5
-   Version: 21
+   Version: 22
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> because they haven't been
@@ -463,7 +463,7 @@ It is illegal to return a list, so this easy mistake fails:
 (At least, it fails in the absence of C<use rx :listquantifier>,
 which is likely to be unimplemented in Perl 6.0.0 anyway).
 
-The optimizer will likely optimize away things like C<**{1...}>
+The optimizer will likely optimize away things like C<**{1..*}>
 so that the closure is never actually run in that case.  But it's
 a closure that must be run in the general case, so you can use
 it to generate a range on the fly based on the earlier matching.
@@ -1682,7 +1682,7 @@ structure:
       # |   $0         $1        ||      |
       # |  _^_      ___^___      ||      |
       # | |   |    |       |     ||      |
-     m/ [ (\w+) \: (\w+ \h*)* \n ]**{2...} /
+     m/ [ (\w+) \: (\w+ \h*)* \n ]**{2..*} /
 
 Non-capturing brackets I<don't> create a separate nested lexical scope,
 so the two subpatterns inside them are actually still in the regex's
@@ -1700,7 +1700,7 @@ parentheses. For example:
 
                #   $0--     $1------
                #   |   |    |       |
-     $text ~~ m/ [ (\w+) \: (\w+ \h*)* \n ]**{2...} /;
+     $text ~~ m/ [ (\w+) \: (\w+ \h*)* \n ]**{2..*} /;
 
      # Because they're in a quantified non-capturing block...
      # $0 contains the equivalent of:
@@ -1730,7 +1730,7 @@ of the inner parens for I<every> iteration (as described above). That is:
                # |                        |
                # | $0[0]    $0[1]---      |
                # | |   |    |       |     |
-     $text ~~ m/ ( (\w+) \: (\w+ \h*)* \n )**{2...} /;
+     $text ~~ m/ ( (\w+) \: (\w+ \h*)* \n )**{2..*} /;
 
      # Because it's in a quantified capturing block,
      # $0 contains the equivalent of:
