--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 1 Apr 2006
+  Last Modified: 22 Apr 2006
   Number: 11
-  Version: 11
+  Version: 12
 
 =head1 Overview
 
@@ -241,9 +241,9 @@ operator in parens:
 
     use Dog-(1.2.1..1.2.3);
     use Dog-(1.2.1..^1.3);
-    use Dog-(1.2.1...);
+    use Dog-(1.2.1..*);
 
-Subversions are wildcarded, so C<1.2> really means C<1.2.0...>.  If you
+Subversions are wildcarded, so C<1.2> really means C<1.2.*>.  If you
 say:
 
     use v6;
@@ -320,7 +320,7 @@ Actually, you can just start your main program with any of:
 
 Those all specify the latest Perl 6 semantics, and are equivalent to
 
-    use Perl-(v6.0...)-(Any);
+    use Perl-(v6..*)-(Any);
 
 To lock the semantics to 6.0.0, say:
 
