--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 22 Apr 2006
+  Last Modified: 23 Apr 2006
   Number: 2
-  Version: 29
+  Version: 30
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -603,8 +603,9 @@ hash, all named arguments; into a scalar, its invocant.
 
 All prefix sigil operators accept one positional argument, evaluated in
 scalar context as a rvalue.  They can interpolate in strings if called with
-parentheses.  The C<$()>, C<@()> and C<%()> forms defaults to C<$/> as the
-implicit argument.
+parentheses.  The special syntax form C<$()> translates into C<$( $/ )> 
+to operate on the current match object; the same applies to C<@()>, C<%()> and
+C<*()> forms.
 
 C<Capture> objects fill the ecological niche of references in Perl 6.
 You can think of them as "fat" references, that is, references that
