PCR: added positional parameters in rules
git-svn-id: http://svn.pugscode.org/pugs@10070 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Compiler-Rule/ChangeLog
+++ b/misc/pX/Common/Pugs-Compiler-Rule/ChangeLog
@@ -1,3 +1,5 @@
+- implemented parameters in subrule call (positionals only, constants only)
+
 - '<before ...>', '$'
 
 - new class 'Pugs::Grammar::Category'
